# dbc

./: .gitignore  CHANGELOG  LICENSE  README.md  bundle.rs
client/: .env  build.sh  deno.json  explain.html  index.html  vite.config.ts
client/src/: App.tsx  CompletionProvider.ts  api.ts  const.ts  index.css  ipc.ts  local-storage.ts  main.tsx
client/src/components/: Alerts.tsx  ContextMenu.tsx  Editor.tsx  EditorTab.tsx  Modal.tsx  Navbar.tsx  Pagination.tsx  ParamModal.tsx  QueryResults.tsx  SearchableList.tsx  SettingsModal.tsx  StreamModal.tsx  ThemeSelect.tsx
client/src/components/editor/: ConnectionSelect.tsx  DatabaseSelect.tsx  SchemaSelect.tsx  utils.ts
client/src/components/editor/themes/: catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json
client/src/components/explain/: ExplainVisualize.tsx
client/src/components/form/: ColorRadio.tsx  Field.tsx  Fieldset.tsx
client/src/components/results/: Filters.tsx  QueryResults.tsx
client/src/components/tables/: SearchableList.tsx  TablesPanel.tsx
client/src/hooks/: useClickAway.ts  useConnectionVersion.ts  useResize.ts  useResize.tsx
client/src/models/: config.ts  connection.ts  database.ts  query.ts  schema.ts  table.ts
client/src/themes/: catppuccin-frappe.json
examples/: get_password.sh
server/: .env  Cargo.toml
server/src/: db.rs  lib.rs  main.rs  persistence.rs  pool.rs  server.rs  stream.rs
server/src/server/: routes.rs  webview.rs
server/src/server/routes/: debug.rs  headers.rs
