[package]
name = "dbc"
version = "0.1.0"
edition = "2024"

[features]
bundle = ["dep:tao", "dep:wry"]

[dependencies]
aes-gcm = "0.10.3"
bon = "3.5.1"
dotenv = "0.15.0"
eyre = "0.6.12"
futures-util = "0.3.31"
hex = "0.4.3"
native-tls = "0.2.14"
poem = { version = "3.1.8", features = ["eyre06", "websocket"] }
postgres-native-tls = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
  "with-serde_json-1",
  "with-time-0_3",
] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tao = { version = "0.34.0", optional = true }
wry = { version = "0.52.1", optional = true }
